# OpenSMTPD-extras

./: .gitignore  Makefile  Makefile.am  README.md  bootstrap  configure.ac
api/: dict.c  filter_api.c  iobuf.h  ioev.c  log.c  log.h  mproc.c  queue_api.c  queue_utils.c  rfc2822.c  rfc2822.h  scheduler_api.c  smtpd-api.h  smtpd-defines.h  table_api.c  to.c  tree.c  util.c
extras/: Makefile  Makefile.am
extras/api/: filter_api.c  ioev.c  log.h  mproc.c  queue_api.c  queue_utils.c  scheduler_api.c  smtpd-api.h  smtpd-defines.h  table_api.c  tree.c
extras/filters/: Makefile  Makefile.am  Makefile.inc  filter_api.3
extras/filters/filter-clamav/: Makefile  Makefile.am  filter-clamav.8  filter_clamav.c
extras/filters/filter-dkim-signer/: Makefile  Makefile.am  filter_dkim_signer.c
extras/filters/filter-dnsbl/: Makefile  Makefile.am  filter-dnsbl.8  filter_dnsbl.c
extras/filters/filter-lua/: Makefile  Makefile.am  filter_lua.c
extras/filters/filter-monkey/: Makefile  Makefile.am  filter-monkey.8  filter-monkey.conf  filter-monkey.conf.5.in  filter_monkey.c
extras/filters/filter-pause/: Makefile  Makefile.am  filter-pause.8  filter_pause.c
extras/filters/filter-perl/: Makefile  Makefile.am  filter_perl.c
extras/filters/filter-python/: Makefile  Makefile.am  filter_python.c
extras/filters/filter-regex/: Makefile  Makefile.am  README.md  filter-regex.8  filter-regex.8.in  filter-regex.conf  filter-regex.conf.5  filter-regex.conf.5.in  filter_regex.c
extras/filters/filter-rspamd/: Makefile.am  filter_rspamd.c  fixme.c  json.c  rspamd.c  rspamd.h
extras/filters/filter-spamassassin/: Makefile  Makefile.am  filter-spamassassin.8  filter_spamassassin.c
extras/filters/filter-stub/: Makefile  Makefile.am  filter-stub.8  filter_stub.c
extras/filters/filter-trace/: Makefile  Makefile.am  filter-trace.8  filter_trace.c
extras/filters/filter-void/: Makefile  Makefile.am  filter-void.8  filter_void.c
extras/filters/smtpfd/: Makefile  control.c  control.h  engine.c  engine.h  frontend.c  frontend.h  frontend_smtpf.c  io.c  io.h  iobuf.c  iobuf.h  log.c  log.h  logmsg.c  parse.y  printconf.c  proc.c  proc.h  resolver.c  smtpfd.8  smtpfd.c  (+3 more)
extras/queues/: Makefile  Makefile.inc
extras/schedulers/: Makefile  Makefile.am  Makefile.inc
extras/tables/: Makefile  Makefile.am  Makefile.inc
extras/tools/: Makefile.am
extras/wip/: Makefile.am
extras/wip/filters/: Makefile.am  filter_api.3
extras/wip/filters/filter-clamav/: Makefile.am  filter-clamav.8  filter_clamav.c
extras/wip/filters/filter-dkim-signer/: Makefile.am  filter-dkim-signer.8  filter_dkim_signer.c
extras/wip/filters/filter-dnsbl/: Makefile.am  filter-dnsbl.8  filter_dnsbl.c
extras/wip/filters/filter-lua/: Makefile.am  filter_lua.c
extras/wip/filters/filter-monkey/: Makefile.am  filter-monkey.8  filter-monkey.8.in  filter-monkey.conf.5  filter_monkey.c  monkey.conf
extras/wip/filters/filter-pause/: Makefile.am  filter-pause.8  filter_pause.c
extras/wip/filters/filter-perl/: Makefile.am  filter_perl.c
extras/wip/filters/filter-python/: Makefile.am  filter_python.c
extras/wip/filters/filter-regex/: Makefile.am  filter-regex.8  filter-regex.8.in  filter-regex.conf.5  filter_regex.c
extras/wip/filters/filter-rspamd/: filter_rspamd.c
extras/wip/filters/filter-spamassassin/: Makefile.am  filter-spamassassin.8  filter_spamassassin.c
extras/wip/filters/filter-stub/: Makefile.am  filter-stub.8  filter_stub.c
extras/wip/filters/filter-trace/: Makefile.am  filter-trace.8  filter_trace.c
extras/wip/filters/filter-void/: Makefile.am  filter-void.8  filter_void.c
extras/wip/queues/queue-python/: Makefile.am  queue_python.c
extras/wip/schedulers/scheduler-python/: Makefile.am  scheduler_python.c
extras/wip/tables/: Makefile.am
extras/wip/tables/table-ldap/: Makefile.am  aldap.c  aldap.h  ber.c  ber.h  table_ldap.c
extras/wip/tables/table-mysql/: Makefile.am  table_mysql.c
extras/wip/tables/table-passwd/: Makefile.am  table-passwd.5  table_passwd.c
extras/wip/tables/table-postgres/: Makefile.am  table_postgres.c
extras/wip/tables/table-python/: Makefile.am  table_python.c
extras/wip/tables/table-redis/: Makefile.am  table_redis.5  table_redis.c
extras/wip/tables/table-socketmap/: Makefile.am  table-socketmap.5  table_socketmap.c
extras/wip/tables/table-sqlite/: Makefile.am  table_sqlite.5  table_sqlite.c
extras/wip/tables/table-stub/: Makefile.am  table_stub.c
filters/: Makefile  Makefile.inc
filters/filter-lua/: Makefile
filters/filter-python/: Makefile
filters/filter-stub/: Makefile
infrastructure/: dict.c  smtpd-api.h
mk/: Makefile.am  experimental.mk  filter.mk  pathnames  paths.mk  queue.mk  scheduler.mk  stable.mk  table.mk  tool.mk  wip.mk
mk/filters/: Makefile.am
mk/filters/dnsbl/: Makefile.am
mk/filters/filter-perl/: Makefile.am
mk/queues/: Makefile.am
mk/schedulers/: Makefile.am
mk/tables/: Makefile.am
mk/tables/table-ldap/: Makefile.am
mk/tables/table-mysql/: Makefile.am
mk/tables/table-passwd/: Makefile.am
mk/tables/table-postgres/: Makefile.am
mk/tables/table-python/: Makefile.am
mk/tables/table-redis/: Makefile.am
mk/tables/table-socketmap/: Makefile.am
mk/tables/table-sqlite/: Makefile.am
mk/wip/tables/table-ldap/: Makefile.am
openbsd-compat/: Makefile.am  NOTES  arc4random.c  base64.c  base64.h  bsd-misc.c  bsd-misc.h  defines.h  entropy.c  getopt.c  imsg-buffer.c  imsg.c  imsg.h  includes.h  log.h  mktemp.c  openbsd-compat.h  util.h  xmalloc.c  xmalloc.h
queue_backend/queue_python/: Makefile
queues/: Makefile  Makefile.inc
queues/queue-null/: Makefile
queues/queue-python/: Makefile
queues/queue-ram/: Makefile
queues/queue-stub/: Makefile
schedulers/: Makefile
schedulers/scheduler-python/: Makefile
schedulers/scheduler-ram/: scheduler_ram.c
table_backend/: Makefile
table_backend/table-mysql/: Makefile
tables/: Makefile
tables/table-ldap/: Makefile
tables/table-mysql/: Makefile
tables/table-postgres/: Makefile
tables/table-redis/: Makefile
tables/table-socketmap/: Makefile
(+112 files in other folders)
